<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SonsAudiosActivity"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/img_cow"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/soundCow"
        app:srcCompat="@raw/cowimage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_toque_na_imagem"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:contentDescription="@string/dois_cachorros_brincando"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/soundDog"
        app:srcCompat="@raw/dogimage" />



</LinearLayout>